@@ -900,4 +900,10 @@
     <email>massimo.furlani@libero.it</email>
     <bugzilla-account>massimo.furlani@libero.it</bugzilla-account>
   </person>
+  <!-- ht translation coordinator -->
+  <person id="x-masterches">
+    <name>Chesner Desir</name>
+    <email>chesmaster@gmail.com</email>
+    <bugzilla-account>chesmaster@gmail.com</bugzilla-account>
+  </person>
 </people>
