@@ -244,6 +244,11 @@
     <coordinator id="karunakar"/>
     <webpage>http://www.indlinux.org/hindi/</webpage>
   </team>
+  <team id="ht">
+    <_language id="ht">Haitian Creole</_language>
+    <coordinator id="x-masterches"/>
+    <webpage>https://wiki.ubuntu.com/HaitianCreoleTeam</webpage>
+  </team>  
   <team id="hu">
     <_language id="hu">Hungarian</_language>
     <coordinator id="kelemeng"/>
