@@ -1,5 +1,12 @@
 2007-12-18  Johannes Schmid <jhs@gnome.org>
 
+	* people.xml.in:
+	* translation-teams.xml.in:
+
+	Added ht translation team
+
+2007-12-18  Johannes Schmid <jhs@gnome.org>
+
 	* gnome-modules.xml.in: gnome-2-20 branch for ghex
 	* releases.xml.in: Fixed some branches (e.g gnome-2-20 in the GNOME
 	2.16 set)
